crates/cadenza-compiler/test-data/semantics/variables-error-list-pattern-in-let.cdz
let [x, y] = my_list